--- a/pub/index.html
+++ b/pub/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <script src="libs/angular/angular.min.js"></script>
-    <script src="libs/angular/angular-route.min.js"></script>
+    <script src="libs/angular/angular-local-storage.min.js"></script>
 
     <script src="main.js"></script>
 
@@ -13,7 +13,9 @@
 <body>
 
 <div ng-controller="GuideController" id="Guide">
-    <h2>Guide, LOL</h2>
+    <h2>Guide</h2>
+
+<div class="WaitingForLoading">Waiting for data load to start...</div>
 
 </div>
 
