--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
 
+    <link rel="stylesheet" href="style.css" />
+
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular/angular-local-storage.min.js"></script>
 
@@ -12,9 +14,7 @@
 </head>
 <body>
 
-<div ng-controller="GuideController" id="Guide">
-    @@include('./modules/guide/view.html')
-</div>
+@@include('./modules/guide/view.html')
 
 </body>
 </html>
