Added basic functionality to checkmark buttons. Added LiveScript prelude library.

--- a/src/modules/guide/view.html
+++ b/src/modules/guide/view.html
@@ -2,12 +2,12 @@
 
 <script type="text/ng-template" id="GuideEntry">
     <div class="header" ng-if="entry.title">
+        <button class="check-mark" ng-click="entryDone($event, entry)">✓</button>
         <div class="title">{{entry.title}}</div>
         <span class="label" ng-repeat="label in entry.labels">{{label}}</span>
     </div>
     <div class="content">
-
-        <ng-if="entry.content">{{entry.content}}</ng-if>
+        <span ng-if="entry.content" ng-bind-html="entry.content"></span>
 
         <ul ng-if="entry.children">
             <li ng-repeat="entry in entry.children"
@@ -15,6 +15,7 @@
                 ng-class="getClassesFor(entry)"
                 data-id="{{entry.id}}"
                 data-labels="{{entry.labels}}"
+                ng-hide="entry.done"
                 jqx-expander
                 jqx-settings="getExpanderSettingsFor(entry)">
             </li>
