--- a/pub/index.html
+++ b/pub/index.html
@@ -8,7 +8,7 @@
 
     <script src="libs/jquery/jquery-2.1.4.min.js"></script>
 
-    <link rel="stylesheet" href="libs/jqwidgets/styles/jqx.base.css" />
+    <link rel="stylesheet" href="libs/jqwidgets/styles/jqx.base.css"/>
     <script src="libs/jqwidgets/jqxangular.js"></script>
     <script src="libs/jqwidgets/jqxcore.js"></script>
     <script src="libs/jqwidgets/jqxexpander.js"></script>
@@ -18,7 +18,7 @@
     <script src="libs/ui-grid/ui-grid-unstable.min.js"></script>
 
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <script src="main.js"></script>
 
     <title></title>
@@ -28,11 +28,15 @@
 <div jqx-tabs>
 
     <ul>
+        <li>Inventory</li>
         <li>Guide</li>
         <li>Items</li>
     </ul>
 
-<script type="text/ng-template" id="GuideEntry">
+    <div id="Inventory" ng-controller="InventoryController">
+    <div ui-grid="gridOptions"></div>
+</div>
+    <script type="text/ng-template" id="GuideEntry">
     <div class="header" ng-if="entry.title">
         <button class="check-mark" ng-click="entryDone($event, entry)">✓</button>
         <div class="title">{{entry.title}}</div>
@@ -58,7 +62,7 @@
 
 <div id="Guide" ng-controller="GuideController" ng-include="'GuideEntry'">
 </div>
-<div id="Items" ng-controller="ItemsController">
+    <div id="Items" ng-controller="ItemsController">
     <select ng-change="selectedItemTypeChanged()" ng-model="selectedItemType"
             ng-options="itemType as 'Show '+itemType for itemType in itemTypes">
     </select>
