--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <script src="libs/jquery/jquery-2.1.4.min.js"></script>
 
-    <link rel="stylesheet" href="libs/jqwidgets/styles/jqx.base.css" />
+    <link rel="stylesheet" href="libs/jqwidgets/styles/jqx.base.css"/>
     <script src="libs/jqwidgets/jqxangular.js"></script>
     <script src="libs/jqwidgets/jqxcore.js"></script>
     <script src="libs/jqwidgets/jqxexpander.js"></script>
@@ -18,7 +18,7 @@
     <script src="libs/ui-grid/ui-grid-unstable.min.js"></script>
 
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <script src="main.js"></script>
 
     <title></title>
@@ -28,12 +28,14 @@
 <div jqx-tabs>
 
     <ul>
+        <li>Inventory</li>
         <li>Guide</li>
         <li>Items</li>
     </ul>
 
-@@include('./modules/guide/view.html')
-@@include('./modules/items/view.html')
+    @@include('./modules/inventory/view.html')
+    @@include('./modules/guide/view.html')
+    @@include('./modules/items/view.html')
 
 </div>
 
