--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="libs/ui-grid/ui-grid-unstable.min.css"/>
     <script src="libs/ui-grid/ui-grid-unstable.min.js"></script>
 
+    <script src="libs/angucomplete-alt/angucomplete-alt.min.js"></script>
+    <link rel="stylesheet" href="libs/angucomplete-alt/angucomplete-alt.css"/>
+
 
     <link rel="stylesheet" href="style.css"/>
     <script src="main.js"></script>
