--- a/src/modules/inventory/view.html
+++ b/src/modules/inventory/view.html
@@ -1,3 +1,21 @@
 <div id="Inventory" ng-controller="InventoryController">
+    <angucomplete-alt
+            id="AddToInventory"
+            local-data="allItems"
+            selected-object="selectedItem"
+            title-field="name"
+            search-fields="name"></angucomplete-alt>
+
+    <button ng-click="addItem()" ng-disabled="!selectedItem">Add to inventory</button>
+
+    <!-- Grid -->
     <div ui-grid="gridOptions"></div>
+
+    <!-- Grid action buttons -->
+    <script type="text/ng-template" id="GridRowHeader.html">
+        <button ng-click="grid.appScope.addItem(row.entity.name)">+</button>
+        <button ng-click="grid.appScope.removeItem(row.entity.name)">–</button>
+    </script>
+
+
 </div>
