Reworked inventory to work with full names and reference item model.

--- a/pub/index.html
+++ b/pub/index.html
@@ -41,7 +41,7 @@
             id="AddToInventory"
             local-data="allItems"
             selected-object="selectedItem"
-            title-field="name"
+            title-field="fullName"
             search-fields="name"></angucomplete-alt>
 
     <button ng-click="addItem()" ng-disabled="!selectedItem">Add to inventory</button>
