--- a/pub/index.html
+++ b/pub/index.html
@@ -51,8 +51,8 @@
 
     <!-- Grid action buttons -->
     <script type="text/ng-template" id="GridRowHeader.html">
-        <button ng-click="grid.appScope.addItem(row.entity.name)">+</button>
-        <button ng-click="grid.appScope.removeItem(row.entity.name)">–</button>
+        <button ng-click="grid.appScope.addItem(row.entity.item.fullName)">+</button>
+        <button ng-click="grid.appScope.removeItem(row.entity.item.fullName)">–</button>
     </script>
 
 
