--- a/src/modules/items/view.html
+++ b/src/modules/items/view.html
@@ -3,5 +3,7 @@
             ng-options="itemType as 'Show '+itemType for itemType in itemTypes">
     </select>
     <button ng-click="exportAsJson()">Export as JSON</button>
-    <div ui-grid-edit ui-grid-cellNav ui-grid="gridOptions"></div>
+    <button ng-click="exportAsCsv()">Export as CSV</button>
+
+    <div ui-grid-auto-resize ui-grid="gridOptions"></div>
 </div>
