--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,13 @@
 <div jqx-tabs>
 
     <ul>
+        <li>Character</li>
         <li>Inventory</li>
         <li>Guide</li>
         <li>Items</li>
     </ul>
 
+    @@include('./modules/pc/view.html')
     @@include('./modules/inventory/view.html')
     @@include('./modules/guide/view.html')
     @@include('./modules/items/view.html')
