--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,14 @@
 <div jqx-tabs>
 
     <ul>
-        <li>Items</li>
-        <li>Guide</li>
-        <li>Character</li>
+        <li>Weapon Calculator</li>
         <li>Inventory</li>
+        <li>Stats</li>
     </ul>
 
-    @@include('./modules/items/view.html')
-    @@include('./modules/guide/view.html')
-    @@include('./modules/pc/view.html')
+    @@include('./modules/weaponCalc/view.html')
     @@include('./modules/inventory/view.html')
+    @@include('./modules/pc/view.html')
 
 </div>
 
