--- a/src/modules/inventory/view.html
+++ b/src/modules/inventory/view.html
@@ -13,9 +13,8 @@
 
     <!-- Grid action buttons -->
     <script type="text/ng-template" id="GridRowHeader.html">
-        <button ng-click="grid.appScope.addItem(row.entity.item.fullName)">+</button>
-        <button ng-click="grid.appScope.removeItem(row.entity.item.fullName)">–</button>
+        <button ng-click="grid.appScope.addItem(row.entity.item)">+</button>
+        <button ng-click="grid.appScope.removeItem(row.entity.item)">–</button>
     </script>
-
 
 </div>
