--- a/pub/index.html
+++ b/pub/index.html
@@ -37,7 +37,9 @@
     </ul>
 
     <div id="weaponCalc" ng-controller="weaponCalcController">
-    <button ng-click="calculate()">Calculate</button>
+    <button ng-click="calculate('offence')">Offence</button>
+    <br />
+    <button ng-click="calculate('defence')">Defence</button>
 
     <!-- Results -->
     <div ui-grid-auto-resize ui-grid="gridOptions"></div>
