--- a/src/modules/weaponCalc/view.html
+++ b/src/modules/weaponCalc/view.html
@@ -1,5 +1,7 @@
 <div id="weaponCalc" ng-controller="weaponCalcController">
-    <button ng-click="calculate()">Calculate</button>
+    <button ng-click="calculate('offence')">Offence</button>
+    <br />
+    <button ng-click="calculate('defence')">Defence</button>
 
     <!-- Results -->
     <div ui-grid-auto-resize ui-grid="gridOptions"></div>
