--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
 
+    <!-- Angular core modules -->
     <script src="libs/angular/angular.min.js"></script>
+    <script src="libs/angular/angular-resource.min.js"></script>
+    <script src="libs/angular/angular-route.min.js"></script>
+
+    <!-- Angular third-party components -->
     <script src="libs/angular/angular-local-storage.min.js"></script>
-
-    <script src="libs/jquery/jquery-2.1.4.min.js"></script>
-
-    <link rel="stylesheet" href="libs/jqwidgets/styles/jqx.base.css"/>
-    <script src="libs/jqwidgets/jqxangular.js"></script>
-    <script src="libs/jqwidgets/jqxcore.js"></script>
-    <script src="libs/jqwidgets/jqxexpander.js"></script>
-    <script src="libs/jqwidgets/jqxtabs.js"></script>
 
     <link rel="stylesheet" href="libs/ui-grid/ui-grid-unstable.min.css"/>
     <script src="libs/ui-grid/ui-grid-unstable.min.js"></script>
@@ -20,27 +17,25 @@
     <script src="libs/angucomplete-alt/angucomplete-alt.min.js"></script>
     <link rel="stylesheet" href="libs/angucomplete-alt/angucomplete-alt.css"/>
 
+<!--
+    <script src="libs/jquery/jquery-2.1.4.min.js"></script>
+
+    <link rel="stylesheet" href="libs/jqwidgets/styles/jqx.base.css"/>
+    <script src="libs/jqwidgets/jqxangular.js"></script>
+    <script src="libs/jqwidgets/jqxcore.js"></script>
+    <script src="libs/jqwidgets/jqxexpander.js"></script>
+    <script src="libs/jqwidgets/jqxtabs.js"></script>
+-->
+
 
     <link rel="stylesheet" href="style.css"/>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
 
     <title></title>
 </head>
 <body>
 
-<div jqx-tabs>
-
-    <ul>
-        <li>Weapon Calculator</li>
-        <li>Inventory</li>
-        <li>Stats</li>
-    </ul>
-
-    @@include('./modules/weaponCalc/view.html')
-    @@include('./modules/inventory/view.html')
-    @@include('./modules/pc/view.html')
-
-</div>
+<div ng-view></div>
 
 </body>
 </html>
