--- a/src/index.html
+++ b/src/index.html
@@ -17,23 +17,23 @@
     <script src="libs/angucomplete-alt/angucomplete-alt.min.js"></script>
     <link rel="stylesheet" href="libs/angucomplete-alt/angucomplete-alt.css"/>
 
-<!--
-    <script src="libs/jquery/jquery-2.1.4.min.js"></script>
-
-    <link rel="stylesheet" href="libs/jqwidgets/styles/jqx.base.css"/>
-    <script src="libs/jqwidgets/jqxangular.js"></script>
-    <script src="libs/jqwidgets/jqxcore.js"></script>
-    <script src="libs/jqwidgets/jqxexpander.js"></script>
-    <script src="libs/jqwidgets/jqxtabs.js"></script>
--->
-
-
+    <!-- My stuff -->
     <link rel="stylesheet" href="style.css"/>
     <script src="app.js"></script>
 
-    <title></title>
+    <title>DSC</title>
 </head>
 <body>
+
+<nav>
+    <ul>
+        <li><a href="#/guide">Guide</a></li>
+        <li><a href="#/inventory">Inventory</a></li>
+        <li><a href="#/w-calc">Weapon calculator</a></li>
+        <li><a href="#/stats">Stats</a></li>
+        <li><a href="#/items">Items</a></li>
+    </ul>
+</nav>
 
 <div ng-view></div>
 
