--- a/src/modules/items/view.html
+++ b/src/modules/items/view.html
@@ -1,6 +1,6 @@
 <div id="Items" ng-controller="ItemsController">
     <select ng-change="selectedItemTypeChanged()" ng-model="selectedItemType"
-            ng-options="itemType as 'Show '+itemType for itemType in itemTypes">
+            ng-options="itemType as 'Show '+itemType+'s' for itemType in itemTypes">
     </select>
     <button ng-click="exportAsJson()">Export as JSON</button>
     <button ng-click="exportAsCsv()">Export as CSV</button>
