--- a/pub/modules/weapon-finder/weapon-finder-view.html
+++ b/pub/modules/weapon-finder/weapon-finder-view.html
@@ -1,1 +1,1 @@
-<div id="WeaponFinder"><button ng-click="findWeapons()">Find the best weapon</button><div ui-grid-auto-resize="ui-grid-auto-resize" ui-grid="gridOptions"></div></div>
+<div id="WeaponFinder"><table class="params"><tr class="requirements"><th class="left">Requirements:</th><td><label>Add<input type="number" ng-model="params.statBonus"/>to all stats</label></td></tr></table><button ng-click="findWeapons()">Find</button><div ui-grid-auto-resize="ui-grid-auto-resize" ui-grid="gridOptions"></div></div>
