[tracker] Added New Londo Ruins content. [armor-finder] Reworked some data structures.

--- a/pub/modules/weapon-finder/weapon-finder-view.html
+++ b/pub/modules/weapon-finder/weapon-finder-view.html
@@ -1,4 +1,4 @@
-<div id="WeaponFinder"><div class="params"><fieldset><legend>Limits:</legend><div class="limits"><div class="row"><label ng-repeat="name in reqLimitArray"><span>{{name | statName}}:</span><input type="number" ng-model="$parent.params.reqLimits[name]" min="8" max="99"/></label></div></div></fieldset></div><!--table.params
+<div id="WeaponFinder"><div class="params"><fieldset><legend>Limits</legend><div class="limits"><div class="row"><label ng-repeat="name in reqLimitArray"><span>{{name | statName}}:</span><input type="number" ng-model="$parent.params.reqLimits[name]" min="8" max="99"/></label></div></div></fieldset></div><!--table.params
 	tr.limits
 		th.left Limits:
 
